<resources>
    <string name="KB_per_s">%1$dKB/s</string>
    <string name="MB_per_s">%1$.1fMB/s</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">关于</string>
    <string name="about_dialog_declaration">© 2016 豌豆荚</string>
    <string name="about_dialog_slogan">「最懂应用的豌豆荚，发现无数好应用」</string>
    <string name="about_dialog_version">版本：</string>
    <string name="acc_auto_install_service_description">"打开「豌豆荚辅助功能」，可确保豌豆荚「彻底加速」和「自动装」功能的顺畅运行。

「彻底加速」可以对顽固重启的应用进行批量休眠操作，彻底阻止应用自启拖慢手机。

「自动装」可以在批量安装和升级应用时，帮你点击所有按钮，无需一直盯着手机。

打开服务时，系统会弹出通知，请点击「确定」。

为保证以上功能正常使用，请将豌豆荚放入清理工具白名单中。

以上功能无需 Root 权限，支持 Android 4.1 以上系统。豌豆荚承诺不会通过本功能收集任何隐私信息。如有问题，请联系我们：hello@wandoujia.com 或 QQ：4006528705 。"</string>
    <string name="acc_auto_install_service_name">豌豆荚辅助功能</string>
    <string name="accessibility_unable_message">当你使用内存清理工具关闭豌豆荚时，豌豆荚辅助功能会被系统关闭。 为正常使用「彻底加速」，请将豌豆荚加入清理工具的白名单中。</string>
    <string name="accessibility_unable_restart">重新开启</string>
    <string name="accessibility_unable_title">「彻底加速」功能被意外关闭</string>
    <string name="account">账号</string>
    <string name="account_active">激活</string>
    <string name="account_active_failure">激活账号失败</string>
    <string name="account_active_waiting">正在激活...</string>
    <string name="account_balance">当前余额:</string>
    <string name="account_bind">账号绑定</string>
    <string name="account_bind_email">绑定 email</string>
    <string name="account_bind_email_hint">绑定成功后，你可以同时使用 email 进行登录。</string>
    <string name="account_bind_failure">绑定失败</string>
    <string name="account_bind_telephone">绑定手机号</string>
    <string name="account_bind_telephone_hint">绑定成功后，你可以同时使用手机号进行登录。</string>
    <string name="account_bind_waiting">正在绑定...</string>
    <string name="account_change_email">修改 email</string>
    <string name="account_change_email_failure">修改 email 失败</string>
    <string name="account_change_email_hint">修改成功后，你可以使用新 email 直接登录，之前绑定的 email 将不再作为登录凭证。</string>
    <string name="account_change_email_waiting">正在修改 email...</string>
    <string name="account_change_failure">修改失败</string>
    <string name="account_change_password">修改密码</string>
    <string name="account_change_password_failure">修改密码失败</string>
    <string name="account_change_password_waiting">正在修改密码</string>
    <string name="account_change_tel">修改手机号</string>
    <string name="account_change_tel_failure">修改手机号失败</string>
    <string name="account_change_tel_hint">修改成功后，你可以使用新手机号直接登录，之前绑定的手机号将不再作为登录凭证。</string>
    <string name="account_change_tel_waiting">正在修改手机号...</string>
    <string name="account_complete_profile_hint">余额会以豌豆币的形式, 充进你的豌豆荚账号, 为确保你可以安全支付, 请补全你的豌豆荚账号信息</string>
    <string name="account_cur_email_hint">当前 email：</string>
    <string name="account_cur_tel_hint">当前手机号：</string>
    <string name="account_email">email</string>
    <string name="account_email_big">Email</string>
    <string name="account_email_input_hint">请输入你的 email</string>
    <string name="account_email_invalid">email 格式不正确,请重新填写</string>
    <string name="account_login">登录账号</string>
    <string name="account_manager">账号管理</string>
    <string name="account_modify">修改个人资料</string>
    <string name="account_new_email">新 email</string>
    <string name="account_new_tel">新手机号</string>
    <string name="account_no_wandou_coin_text">没有豌豆币</string>
    <string name="account_passwd">密码</string>
    <string name="account_register_category_title">注册账号</string>
    <string name="account_save">保存</string>
    <string name="account_sdk_account_was_register_tips">"%s 已被注册
请输入短信激活码、设置新密码后登录"</string>
    <string name="account_sdk_activation_code_error">激活码输入错误，请重新输入</string>
    <string name="account_sdk_activation_code_length">激活码</string>
    <string name="account_sdk_activation_code_send_email_login">请登录邮箱完成修改</string>
    <string name="account_sdk_activation_code_send_email_tips">重置密码的链接已发送至 %s</string>
    <string name="account_sdk_activation_code_send_tips">"验证码已发送至 %s
请输入短信激活码、设置新密码后登录"</string>
    <string name="account_sdk_active_code_hint">激活码</string>
    <string name="account_sdk_active_soon">立刻激活</string>
    <string name="account_sdk_active_title">账号激活</string>
    <string name="account_sdk_agree">注册豌豆荚账号表示你同意</string>
    <string name="account_sdk_app_icon_name">豌豆荚</string>
    <string name="account_sdk_app_name">account</string>
    <string name="account_sdk_avatar_upload_failed">头像上传失败</string>
    <string name="account_sdk_avatar_upload_success">头像上传成功</string>
    <string name="account_sdk_bind_failure">绑定失败</string>
    <string name="account_sdk_bind_waiting">正在绑定...</string>
    <string name="account_sdk_cancel">取消</string>
    <string name="account_sdk_captcha_hint">请输入图示验证码继续，不区分大小写：</string>
    <string name="account_sdk_captcha_title">输入验证码</string>
    <string name="account_sdk_change_avatar">正在更改头像，请稍候</string>
    <string name="account_sdk_change_password_success">更改密码成功</string>
    <string name="account_sdk_choose_wdj_account">请选择豌豆荚账号登录</string>
    <string name="account_sdk_complete">完善豌豆荚账号</string>
    <string name="account_sdk_complete_failure">完善账号失败</string>
    <string name="account_sdk_complete_profile">补全豌豆荚账号</string>
    <string name="account_sdk_complete_profile_failure">完善账号失败</string>
    <string name="account_sdk_complete_waiting">正在完善...</string>
    <string name="account_sdk_confirm">确认</string>
    <string name="account_sdk_cur_tel_username">当前手机号将作为你的豌豆荚账号</string>
    <string name="account_sdk_direct_login">已有账号登录</string>
    <string name="account_sdk_email_big">Email</string>
    <string name="account_sdk_email_countdownload_timer">重新发送 %ds</string>
    <string name="account_sdk_email_empty">请填写 email</string>
    <string name="account_sdk_email_invalid">你输入的不是一个有效的 email 地址，请重新输入。</string>
    <string name="account_sdk_email_register_hint">你的 email</string>
    <string name="account_sdk_email_show">我们已将激活链接发送到你的邮箱 %1$s，请前往你的邮箱完成操作。</string>
    <string name="account_sdk_email_was_send">邮件已重新发送</string>
    <string name="account_sdk_find_password">找回密码</string>
    <string name="account_sdk_forget_password">忘记密码</string>
    <string name="account_sdk_forget_password_failed">忘记密码失败</string>
    <string name="account_sdk_forget_password_title">忘记密码</string>
    <string name="account_sdk_forget_password_user_name_hit">请输入手机号或 email。</string>
    <string name="account_sdk_found_contact">发现通讯录好友</string>
    <string name="account_sdk_login">登录</string>
    <string name="account_sdk_login_agree">登录豌豆荚账号表示你同意最终用户协议</string>
    <string name="account_sdk_login_failure">登录失败</string>
    <string name="account_sdk_login_other">快捷登录</string>
    <string name="account_sdk_login_title">账号登录</string>
    <string name="account_sdk_login_with_wdj">用豌豆荚账号登录</string>
    <string name="account_sdk_modify_avatar">修改头像</string>
    <string name="apk_download_location_summary">默认位置</string>
    <string name="apk_download_location_title">安装包下载位置</string>
    <string name="app_auto_install_recover_content">"「自动装」被意外关闭，可能因为你强制退出或者用内存清理工具关闭过豌豆荚。
为保证正常使用，请将豌豆荚放入清理白名单中。"</string>
    <string name="app_auto_install_recover_title">重新开启自动装</string>
    <string name="app_auto_install_setting_button">知道了</string>
    <string name="app_auto_install_tip_action">重新打开</string>
    <string name="cancel">取消</string>
    <string name="close_wifi_mode">关闭 Wi-Fi 验证码</string>
    <string name="connection_kown_yet">我知道了</string>
    <string name="connection_tips_usb">通过 USB 连接电脑</string>
    <string name="connection_tips_wifi">通过 Wi-Fi 连接电脑</string>
    <string name="feedback">反馈</string>
    <string name="install_location_auto">应用默认位置</string>
    <string name="install_location_external">优先安装到SD卡（推荐）</string>
    <string name="install_location_internal">优先安装到手机内存</string>
    <string name="install_location_title">应用安装位置</string>
    <string name="install_only_for_root_users">仅限 root 用户</string>
    <string name="net_check_box">进行apk下载速度测试</string>
    <string name="net_fail_now">重新上传</string>
    <string name="net_fail_tip1">检测结果上传过程当中出现错误，请检查手机</string>
    <string name="net_fail_tip2">是否已连接网络，然后尝试重新上传，或等待</string>
    <string name="net_fail_tip3">Wi-Fi 网络连接之后，自动后台上传</string>
    <string name="net_fail_wait">稍后上传</string>
    <string name="net_home_money">*2G/3G环境下，该测试可能消耗800K的流量</string>
    <string name="net_home_start">开始检测</string>
    <string name="net_home_tips1">为了更好的为你服务，这里将通过一系列操作</string>
    <string name="net_home_tips2">检测你的网络环境，并将结果上传到服务器</string>
    <string name="net_home_title">网络环境检测工具</string>
    <string name="net_home_warning1">请在开始前确保手机已经联网</string>
    <string name="net_mail_example">example@email.com</string>
    <string name="net_mail_finish">完成继续</string>
    <string name="net_mail_input">填写你的电子邮箱</string>
    <string name="net_mail_tip1">请填写你的邮箱地址，便于我们在必要的时候进</string>
    <string name="net_mail_tip2">一步和你进行联系</string>
    <string name="net_mail_warning">请填写你的邮箱后继续</string>
    <string name="net_post_fail">结果上传失败</string>
    <string name="setting_apk_delete_after_dl">下载安装成功后删除安装包</string>
    <string name="setting_auto_check_app_upgrade">自动检测可升级应用</string>
    <string name="setting_auto_check_app_upgrade_summary">此功能会把你安装的应用列表发送到豌豆荚服务器，用来查找最新版本的应用</string>
    <string name="setting_auto_install_apk">自动安装应用</string>
    <string name="setting_auto_install_apk_summary">支持 Android 4.1 以上，无需 root 权限</string>
    <string name="setting_download_title">下载与升级</string>
    <string name="setting_normal">基本设置</string>
    <string name="setting_notify_summary">通知栏提醒太频繁？点击这里进行设置</string>
    <string name="setting_notify_title">通知栏提醒</string>
    <string name="setting_summary_clear_cache">...</string>
    <string name="setting_summary_font">方正兰亭黑的字形更优雅，设置后将在下次启动时生效</string>
    <string name="setting_title_about">关于豌豆荚</string>
    <string name="setting_title_categoty_advanced">高级设置</string>
    <string name="setting_title_clear_cache">缓存清理</string>
    <string name="setting_title_connection">连接电脑</string>
    <string name="setting_title_font">使用方正兰亭黑字体</string>
    <string name="setting_title_root_intall">下载完成后自动安装</string>
    <string name="setting_title_shortcut">设置快捷方式</string>
    <string name="step1_info">将手机和电脑连入同一 Wi-Fi</string>
    <string name="step2_info_detail">如果你的电脑还未安装豌豆荚，请前往 wandoujia.com 下载</string>
    <string name="step2_info_header">在电脑上运行豌豆荚</string>
    <string name="step3_info_detail">如果你未找到当前手机，请直接输入以下验证码</string>
    <string name="step3_info_header">点击左上角的 “连接手机” 并选择当前手机</string>
    <string name="step4_info_detail">连接数据线后，豌豆荚会自动建立连接</string>
    <string name="step4_info_header">使用 USB 数据线连接电脑和手机</string>
    <string name="step_number_1">1</string>
    <string name="step_number_2">2</string>
    <string name="step_number_3">3</string>
    <string name="wdj_paysdk_account_logout">退出登录</string>
</resources>