<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.wandoujia.jupiter.toolbar.JupiterToolbar android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="@dimen/margin_xhuge" android:textColor="@color/safe_color_normal" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="96.0dip" android:text="@string/net_home_title" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
        <TextView android:textColor="@color/text_color_black" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/app_icon_size_small" android:text="@string/net_home_tips1" android:layout_below="@id/textView1" android:layout_centerHorizontal="true" />
        <TextView android:textColor="@color/text_color_black" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/net_home_tips2" android:layout_below="@id/textView2" android:layout_centerHorizontal="true" />
        <TextView android:textColor="@color/text_color_black" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/net_home_warning1" android:layout_below="@id/textView3" android:layout_centerHorizontal="true" />
        <Button android:id="@id/start_check" android:paddingLeft="@dimen/small_button_height" android:paddingTop="@dimen/homepage_cover_panel_padding" android:paddingRight="@dimen/small_button_height" android:paddingBottom="@dimen/homepage_cover_panel_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/small_button_height" android:text="@string/net_home_start" android:layout_below="@id/textView4" android:layout_centerHorizontal="true" style="@style/button_large" />
        <CheckBox android:textSize="@dimen/account_xsmall_textSize" android:textColor="@color/list_header_label_text_color" android:id="@id/net_checkbox" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@drawable/aa_checkbox_large_normal_bg" android:text="@string/net_check_box" android:layout_below="@id/start_check" android:layout_centerHorizontal="true" />
        <TextView android:textColor="@color/safe_color_normal" android:id="@id/netcheck_2g" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/net_home_money" android:layout_below="@id/net_checkbox" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</ScrollView>