<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioGroup android:orientation="vertical" android:id="@id/install_location_radio_group" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton android:id="@id/root_install_location_auto" android:text="@string/install_location_auto" style="@style/choose_location_radio_button_style" />
        <RadioButton android:id="@id/root_install_location_external" android:text="@string/install_location_external" style="@style/choose_location_radio_button_style" />
        <RadioButton android:id="@id/root_install_location_internal" android:text="@string/install_location_internal" style="@style/choose_location_radio_button_style" />
    </RadioGroup>
</ScrollView>