<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.wandoujia.jupiter.toolbar.JupiterToolbar android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="@dimen/margin_xhuge" android:textColor="@color/wan_text_red" android:id="@id/netchek_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="96.0dip" android:text="@string/net_post_fail" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
        <TextView android:id="@id/netcheck_tip1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/app_icon_size_small" android:text="@string/net_fail_tip1" android:layout_below="@id/netchek_title" android:layout_centerHorizontal="true" />
        <Button android:id="@id/post_now" android:background="@color/safe_color_normal" android:paddingLeft="@dimen/small_button_height" android:paddingTop="@dimen/homepage_cover_panel_padding" android:paddingRight="@dimen/small_button_height" android:paddingBottom="@dimen/homepage_cover_panel_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/small_button_height" android:text="@string/net_fail_now" android:layout_below="@id/netcheck_tip3" android:layout_centerHorizontal="true" style="@style/button_large" />
        <TextView android:id="@id/netcheck_tip2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/net_fail_tip2" android:layout_below="@id/netcheck_tip1" android:layout_centerHorizontal="true" />
        <TextView android:id="@id/netcheck_tip3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/net_fail_tip3" android:layout_below="@id/netcheck_tip2" android:layout_centerHorizontal="true" />
        <Button android:textColor="@color/text_color_black" android:id="@id/post_later" android:background="@color/grey" android:paddingLeft="@dimen/small_button_height" android:paddingTop="@dimen/homepage_cover_panel_padding" android:paddingRight="@dimen/small_button_height" android:paddingBottom="@dimen/homepage_cover_panel_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/text_size_large" android:text="@string/net_fail_wait" android:layout_below="@id/post_now" android:layout_centerHorizontal="true" style="@style/button_large" />
    </RelativeLayout>
</ScrollView>