<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.wandoujia.jupiter.toolbar.JupiterToolbar android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="@dimen/margin_xhuge" android:textColor="@color/safe_color_normal" android:id="@id/netcheck_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="96.0dip" android:text="@string/net_mail_input" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
        <TextView android:textColor="@color/text_color_black" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/app_icon_size_small" android:text="@string/net_mail_tip1" android:layout_below="@id/netcheck_email" android:layout_centerHorizontal="true" />
        <TextView android:textColor="@color/text_color_black" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/net_mail_tip2" android:layout_below="@id/textView1" android:layout_centerHorizontal="true" />
        <EditText android:textSize="@dimen/text_size_middle" android:id="@id/mail_editview" android:background="@drawable/aa_searchbox" android:paddingLeft="@dimen/sidebar_home_category_item_height" android:paddingTop="@dimen/app_detail_title_top_margin" android:paddingRight="@dimen/sidebar_home_category_item_height" android:paddingBottom="@dimen/app_detail_title_top_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xhuge" android:hint="@string/net_mail_example" android:singleLine="true" android:layout_below="@id/textView2" android:layout_centerHorizontal="true" />
        <TextView android:textColor="@color/wan_text_red" android:id="@id/email_warning" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/text_size_middle" android:text="@string/net_mail_warning" android:layout_below="@id/mail_editview" android:layout_centerHorizontal="true" />
        <Button android:id="@id/finish_check" android:paddingLeft="@dimen/small_button_height" android:paddingTop="@dimen/homepage_cover_panel_padding" android:paddingRight="@dimen/small_button_height" android:paddingBottom="@dimen/homepage_cover_panel_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/text_size_middle" android:text="@string/net_mail_finish" android:layout_below="@id/email_warning" android:layout_centerHorizontal="true" style="@style/button_large" />
    </RelativeLayout>
</ScrollView>